RenderTreeNeedsLayoutChecker asserts with imported/w3c/web-platform-tests/css/css-position/position-absolute-crash-chrome-005.html https://bugs.webkit.org/show_bug.cgi?id=209022 <rdar://problem/60390647>

Reviewed by Simon Fraser.

Source/WebCore:

Fix the case when
1. the block level box is no longer the containing block for its out-of-flow descendants and
2. the new containing block does not get marked dirty because there's a re-layout boundary (overflow: hidden)
between the old and the new containing block.

Test: fast/block/containing-block-for-out-of-flow-becomes-static.html

* rendering/RenderBlock.cpp:
(WebCore::RenderBlock::removePositionedObjectsIfNeeded):
(WebCore::RenderBlock::removePositionedObjects):

LayoutTests:

* TestExpectations:
* fast/block/containing-block-for-out-of-flow-becomes-static-expected.html: Added.
* fast/block/containing-block-for-out-of-flow-becomes-static.html: Added.


Canonical link: https://commits.webkit.org/221937@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@258380 268f45cc-cd09-0410-ab3c-d52691b4dbfc